--- a/src/styles/jquery-datatables.css
+++ b/src/styles/jquery-datatables.css
@@ -15,10 +15,9 @@
 }
 
 .sorting_asc {
-	background-image:url(http://hyp2.hyperiums.com/themes/theme1/misc/arrow_decrease.gif);
+	background-image:url(https://www.hyperiums.com/themes/theme1/misc/arrow_decrease.gif);
 }
 
 .sorting_desc {
-	background-image:url(http://hyp2.hyperiums.com/themes/theme1/misc/arrow_increase.gif);
+	background-image:url(https://www.hyperiums.com/themes/theme1/misc/arrow_increase.gif);
 }
-
